Add styles.css and begin building HTML layout

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,19 @@
     <title>Activity Tracker</title>
   </head>
   <body>
-    <h1>Activity Tracker</h1>
+    <div class="wrapper">
+    <div class="box a">A</div>
+    <div class="box b">B</div>
+    <div class="box c">C</div>
+    <div class="box d">D</div>
+    <div class="box e">E</div>
+    <div class="box f">F</div>
+    <div class="box f">F</div>
+    <div class="box f">F</div>
+    <div class="box f">F</div>
+    <div class="box f">F</div>
+    <div class="box f">F</div>
+  </div>
 
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
