--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="UTF-8">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <link rel="reset" type="text/css" href="css/reset.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Activity Tracker</title>
   </head>
   <body>
@@ -12,13 +15,24 @@
     <div class="box d">D</div>
     <div class="box e">E</div>
     <div class="box f">F</div>
-    <div class="box f">F</div>
-    <div class="box f">F</div>
-    <div class="box f">F</div>
-    <div class="box f">F</div>
-    <div class="box f">F</div>
+    <div class="box g">G</div>
+    <div class="box h">H</div>
+    <div class="box i">I</div>
+    <div class="box j">J</div>
+    <div class="box k">K</div>
+    <div class="box l">L</div>
+    <div class="box m">M</div>
+    <div class="box n">N</div>
+    <div class="box o">O</div>
+    <div class="box p">P</div>
+    <div class="box q">Q</div>
+    <div class="box r">R</div>
+    <div class="box s">S</div>
+    <div class="box t">T</div>
+    <div class="box u">U</div>
+    <div class="box v">V</div>
+    <div class="box w">W</div>
   </div>
-
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
     <script type="text/javascript" src="../data/sleep.js"></script>
