--- a/src/index.html
+++ b/src/index.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href="styles.css" rel ="stylesheet" type="text/css">
+    <link rel="reset" type="text/css" href="src/reset.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <link rel="reset" type="text/css" href="css/reset.css">
-    <link rel="stylesheet" href="css/styles.css">
     <title>Activity Tracker</title>
   </head>
   <body>
     <div class="wrapper">
-    <div class="box a">A</div>
-    <div class="box b">B</div>
-    <div class="box c">C</div>
-    <div class="box d">D</div>
-    <div class="box e">E</div>
-    <div class="box f">F</div>
-    <div class="box g">G</div>
-    <div class="box h">H</div>
-    <div class="box i">I</div>
-    <div class="box j">J</div>
-    <div class="box k">K</div>
-    <div class="box l">L</div>
-    <div class="box m">M</div>
-    <div class="box n">N</div>
-    <div class="box o">O</div>
-    <div class="box p">P</div>
-    <div class="box q">Q</div>
-    <div class="box r">R</div>
-    <div class="box s">S</div>
-    <div class="box t">T</div>
-    <div class="box u">U</div>
-    <div class="box v">V</div>
-    <div class="box w">W</div>
+      <div class="box a">
+        <div class="header q">Name</div>
+        <div class="header r">Activity Stats</div>
+        <div class="header s">Hydration Stats</div>
+        <div class="header t">Sleep Stats</div>
+      </div>
+      <div class="box b">B</div>
+      <div class="box d">D</div>
+      <div class="box e">
+          <div class="widgetA">Steps</div>
+          <div class="widgetB">Activity</div>
+          <div class="widgetC">Miles Run</div>
+          <div class="widgetD">Stairs Climbed</div>
+      </div>
+      <div class="box g">G</div>
+      <div class="box h">H</div>
+      <div class="box i">I</div>
+      <div class="box l">
+        <div class="box m">M</div>
+        <div class="box n">N</div>
+        <div class="box o">O</div>
+        <div class="box p">P</div>
+      </div>
   </div>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
