Integrate sidebar team member display into grid

--- a/src/index.html
+++ b/src/index.html
@@ -10,13 +10,38 @@
   <body>
     <div class="wrapper">
       <div class="box a">
-        <div class="header q">Name</div>
+        <div class="header q">
+          <div class="photo header">photo</div>
+          <div class="name header">Name</div>
+          <div class="steps header">Steps Taken</div>
+        </div>
         <div class="header r">Activity Stats</div>
         <div class="header s">Hydration Stats</div>
         <div class="header t">Sleep Stats</div>
       </div>
       <div class="box b">B</div>
-      <div class="box d">D</div>
+      <div class="box d">
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div>
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div>
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div>
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div>
+      </div>
       <div class="box e">
           <div class="widgetA">Steps</div>
           <div class="widgetB">Activity</div>
