--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,10 @@
         <div class="header s">Hydration Stats</div>
         <div class="header t">Sleep Stats</div>
       </div>
-      <div class="box b">B</div>
+      <div class="box b">
+        <div class="boxbName">Name</div>
+        <div class="boxbGraph">Steps Done Walked</div>
+      </div>
       <div class="box d">
         <div class="teammember">
           <div class="photo sidebar">photo</div>
@@ -41,6 +44,12 @@
           <div class="name sidebar">Name</div>
           <div class="steps sidebar">Steps Taken</div>
         </div>
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div>
+        <div class="teamstats" type="button">TeamStats</div>
       </div>
       <div class="box e">
           <div class="widgetA">Steps</div>
@@ -48,14 +57,23 @@
           <div class="widgetC">Miles Run</div>
           <div class="widgetD">Stairs Climbed</div>
       </div>
-      <div class="box g">G</div>
-      <div class="box h">H</div>
-      <div class="box i">I</div>
+      <div class="box g">
+          <div class="boxGName">Name</div>
+          <div class="boxGGraph">Miles Runned</div>
+        </div>
+      <div class="box h">
+        <div class="boxHName">Name</div>
+        <div class="boxbHraph">Minutes Active</div>
+      </div>
+      <div class="box i">
+        <div class="boxIName">Name</div>
+        <div class="boxIGraph">Stairs Clombed</div>
+      </div>
       <div class="box l">
-        <div class="box m">M</div>
-        <div class="box n">N</div>
-        <div class="box o">O</div>
-        <div class="box p">P</div>
+        <div class="box m">Best Steps</div>
+        <div class="box n">Best Min/active</div>
+        <div class="box o">Best Miles</div>
+        <div class="box p">Best Stairs</div>
       </div>
   </div>
     <script type="text/javascript" src="../data/users.js"></script>
