Add script tags

--- a/src/index.html
+++ b/src/index.html
@@ -76,6 +76,10 @@
         <div class="box p">Best Stairs</div>
       </div>
   </div>
+    <script type="text/javascript" src="../src/HydrationRepository.js"></script>
+    <script type="text/javascript" src="../src/User.js"></script>
+    <script type="text/javascript" src="../src/UserHydration.js"></script>
+    <script type="text/javascript" src="../src/userRepository.js"></script>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
     <script type="text/javascript" src="../data/sleep.js"></script>
