Add sidebar option to change between profile view and team view

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
       <div class="box a">
         <div class="header q">
           <div class="photo header">photo</div>
-          <div class="name header">Name</div>
+          <div class="username header">Name</div>
           <div class="steps header">Steps Taken</div>
         </div>
         <div class="header r">Activity Stats</div>
@@ -24,6 +24,10 @@
         <div class="boxbGraph">Steps Done Walked</div>
       </div>
       <div class="box d">
+        <div class="sidebarMenu">
+          <div class="profileLink">My Profile</div>
+          <div class="teamLink">My Team</div>
+        </div>
         <div class="teammember">
           <div class="photo sidebar">photo</div>
           <div class="name sidebar">Name</div>
