Add user and team image assets for profile display

--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
     <div class="wrapper">
       <div class="box a">
         <div class="header q">
-          <div class="photo header">photo</div>
-          <div class="username header">Name</div>
-          <div class="steps header">Steps Taken</div>
+          <div id='userPhoto' class="photo header">photo</div>
+          <div id='userName' class="username header">Name</div>
+          <div id='userSteps' class="steps header">Steps Taken</div>
         </div>
         <div class="header r">Activity Stats</div>
         <div class="header s">Hydration Stats</div>
@@ -28,33 +28,35 @@
           <div class="profileLink">My Profile</div>
           <div class="teamLink">My Team</div>
         </div>
-        <div class="teammember">
-          <div class="photo sidebar">photo</div>
-          <div class="name sidebar">Name</div>
-          <div class="steps sidebar">Steps Taken</div>
+        <article class="sideBarContents">
+          <div class="teammember">
+            <div class="photo sidebar">photo</div>
+            <div class="name sidebar">Name</div>
+            <div class="steps sidebar">Steps Taken</div>
+          </div>
+          <div class="teammember">
+            <div class="photo sidebar">photo</div>
+            <div class="name sidebar">Name</div>
+            <div class="steps sidebar">Steps Taken</div>
+          </div>
+          <div class="teammember">
+            <div class="photo sidebar">photo</div>
+            <div class="name sidebar">Name</div>
+            <div class="steps sidebar">Steps Taken</div>
+          </div>
+          <div class="teammember">
+            <div class="photo sidebar">photo</div>
+            <div class="name sidebar">Name</div>
+            <div class="steps sidebar">Steps Taken</div>
+          </div>
+          <div class="teammember">
+            <div class="photo sidebar">photo</div>
+            <div class="name sidebar">Name</div>
+            <div class="steps sidebar">Steps Taken</div>
+          </div>
+          <div class="teamstats" type="button">TeamStats</div>
         </div>
-        <div class="teammember">
-          <div class="photo sidebar">photo</div>
-          <div class="name sidebar">Name</div>
-          <div class="steps sidebar">Steps Taken</div>
-        </div>
-        <div class="teammember">
-          <div class="photo sidebar">photo</div>
-          <div class="name sidebar">Name</div>
-          <div class="steps sidebar">Steps Taken</div>
-        </div>
-        <div class="teammember">
-          <div class="photo sidebar">photo</div>
-          <div class="name sidebar">Name</div>
-          <div class="steps sidebar">Steps Taken</div>
-        </div>
-        <div class="teammember">
-          <div class="photo sidebar">photo</div>
-          <div class="name sidebar">Name</div>
-          <div class="steps sidebar">Steps Taken</div>
-        </div>
-        <div class="teamstats" type="button">TeamStats</div>
-      </div>
+        </article>
       <div class="box e">
           <div class="widgetA">Steps</div>
           <div class="widgetB">Activity</div>
