Organize css main header and rename values for coder empathy

--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,13 @@
     <div class="wrapper">
       <div class="box a">
         <div class="header q">
-          <div id='userPhoto' class="photo header">photo</div>
+          <div id='userPhoto' class="photo header"></div>
           <div id='userName' class="username header">Name</div>
-          <div id='userSteps' class="steps header">Steps Taken</div>
+          <div id='userSteps' class="userSteps header">Steps Taken</div>
         </div>
-        <div class="header r">Activity Stats</div>
-        <div class="header s">Hydration Stats</div>
-        <div class="header t">Sleep Stats</div>
+        <div class="header actMenu">Activity Stats</div>
+        <div class="header hydMenu">Hydration Stats</div>
+        <div class="header slpMenu">Sleep Stats</div>
       </div>
       <div class="box b">
         <div class="boxbName">Name</div>
