--- a/src/index.html
+++ b/src/index.html
@@ -10,67 +10,104 @@
   <body>
     <div class="wrapper">
       <div class="box a">
-        <div class="header q">
-          <div id='userPhoto' class="photo header"></div>
-          <div id='userName' class="username header">Name</div>
-          <div id='userSteps' class="userSteps header">Steps Taken</div>
+        <div class="header userInfo">
+          <div id="userPhoto" class="photo header"></div>
+          <div id="userName" class="username header">Name</div>
+          <div id="userSteps" class="userSteps header">Steps Taken</div>
         </div>
         <div class="header actMenu">Activity Stats</div>
         <div class="header hydMenu">Hydration Stats</div>
         <div class="header slpMenu">Sleep Stats</div>
       </div>
-      <div class="box b">
-        <div class="boxbName">Name</div>
-        <div class="boxbGraph">Steps Done Walked</div>
-      </div>
       <div class="box d">
-        <div class="sidebarMenu">
-          <div class="profileLink">My Profile</div>
-          <div class="teamLink">My Team</div>
+        <div class="sidebarHeader">
+          <img class="profileUserPhoto" src="../assets/userImages/UserImage.jpg" alt="user profile image"></div>
+          <div class="profileUser">UserID</div>
+          <div class="key profileName">NAME: Firstname Lastname</div>
+          <div class="key profileAddress">ADDRESS: 1846 Oxley Street, South Pasadena, CA 91030-9870</div>
+          <div class="key profileEmail">EMAIL: peewee.herman@gmail.com</div>
+          <div class="key profileStride">STRIDE LENGTH: 4.5</div>
+          <div class="key profileStepGoal">DAILY STEP GOAL: 10,000</div>
+          <div class="viewTeam" type="button">View My Team</div>
         </div>
         <article class="sideBarContents">
           <div class="teammember">
-            <div class="photo sidebar">photo</div>
-            <div class="name sidebar">Name</div>
-            <div class="steps sidebar">Steps Taken</div>
+            <div class="photo sidebar">UserID:</div>
+            <div class="name sidebar">1</div>
+            <div class="steps sidebar"></div>
           </div>
           <div class="teammember">
-            <div class="photo sidebar">photo</div>
-            <div class="name sidebar">Name</div>
-            <div class="steps sidebar">Steps Taken</div>
+            <div class="photo sidebar">Name:</div>
+            <div class="name sidebar">Name Here</div>
+            <div class="steps sidebar"></div>
           </div>
           <div class="teammember">
-            <div class="photo sidebar">photo</div>
-            <div class="name sidebar">Name</div>
-            <div class="steps sidebar">Steps Taken</div>
+            <div class="photo sidebar">Address:</div>
+            <div class="name sidebar">4525 West 4th Avenue, Denver, CO 80219-8766</div>
+            <div class="steps sidebar"></div>
           </div>
           <div class="teammember">
-            <div class="photo sidebar">photo</div>
-            <div class="name sidebar">Name</div>
-            <div class="steps sidebar">Steps Taken</div>
+            <div class="photo sidebar">Email:</div>
+            <div class="name sidebar">kristi.ann.miller@gmail.com</div>
+            <div class="steps sidebar"></div>
           </div>
           <div class="teammember">
-            <div class="photo sidebar">photo</div>
-            <div class="name sidebar">Name</div>
-            <div class="steps sidebar">Steps Taken</div>
+            <div class="photo sidebar">Stride Length:</div>
+            <div class="name sidebar">5</div>
+            <div class="steps sidebar"></div>
           </div>
-          <div class="teamstats" type="button">TeamStats</div>
+          <div class="teammember">
+            <div class="photo sidebar">Daily Step Goal:</div>
+            <div class="name sidebar">10,000</div>
+            <div class="steps sidebar"></div>
+          </div>
+          <div id="viewTeam" class="teamstats" type="button">View My Team</div>
+        <!-- <div class="teammember">
+          <div class="photo sidebar"><img class="teamImage" src="../assets/userImages/TeamImage1.jpg" alt="teamMate1 profile image"></div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
         </div>
-        </article>
-      <div class="box e">
-          <div class="widgetA">Steps</div>
-          <div class="widgetB">Activity</div>
-          <div class="widgetC">Miles Run</div>
-          <div class="widgetD">Stairs Climbed</div>
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div>
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div>
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div>
+        <div class="teammember">
+          <div class="photo sidebar">photo</div>
+          <div class="name sidebar">Name</div>
+          <div class="steps sidebar">Steps Taken</div>
+        </div> -->
+        <!-- <div class="teamstats" type="button">TeamStats</div>
+      </div> -->
+    </article>
+    <div class="box e">
+      <div class="widgetA">Steps</div>
+      <div class="widgetB">Activity</div>
+      <div class="widgetC">Miles Run</div>
+      <div class="widgetD">Stairs Climbed</div>
+    </div>
+    <div class="box b">
+        <div class="boxbName">Name</div>
+        <div class="boxbGraph">Steps Done Walked</div>
+      </div>
+      <div class="box h">
+        <div class="boxHName">Name</div>
+        <div class="boxbHraph">Minutes Active</div>
       </div>
       <div class="box g">
           <div class="boxGName">Name</div>
           <div class="boxGGraph">Miles Runned</div>
         </div>
-      <div class="box h">
-        <div class="boxHName">Name</div>
-        <div class="boxbHraph">Minutes Active</div>
-      </div>
       <div class="box i">
         <div class="boxIName">Name</div>
         <div class="boxIGraph">Stairs Clombed</div>
