--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <div class="header slpMenu">Sleep Stats</div>
       </div>
       <div class="box d">
-        <div class="sidebarHeader">
+        <!-- <div class="sidebarHeader">
           <img class="profileUserPhoto" src="../assets/userImages/UserImage.jpg" alt="user profile image"></div>
           <div class="profileUser">UserID</div>
           <div class="key profileName">NAME: Firstname Lastname</div>
@@ -29,40 +29,8 @@
           <div class="key profileStride">STRIDE LENGTH: 4.5</div>
           <div class="key profileStepGoal">DAILY STEP GOAL: 10,000</div>
           <div class="viewTeam" type="button">View My Team</div>
-        </div>
-        <article class="sideBarContents">
-          <div class="teammember">
-            <div class="photo sidebar">UserID:</div>
-            <div class="name sidebar">1</div>
-            <div class="steps sidebar"></div>
-          </div>
-          <div class="teammember">
-            <div class="photo sidebar">Name:</div>
-            <div class="name sidebar">Name Here</div>
-            <div class="steps sidebar"></div>
-          </div>
-          <div class="teammember">
-            <div class="photo sidebar">Address:</div>
-            <div class="name sidebar">4525 West 4th Avenue, Denver, CO 80219-8766</div>
-            <div class="steps sidebar"></div>
-          </div>
-          <div class="teammember">
-            <div class="photo sidebar">Email:</div>
-            <div class="name sidebar">kristi.ann.miller@gmail.com</div>
-            <div class="steps sidebar"></div>
-          </div>
-          <div class="teammember">
-            <div class="photo sidebar">Stride Length:</div>
-            <div class="name sidebar">5</div>
-            <div class="steps sidebar"></div>
-          </div>
-          <div class="teammember">
-            <div class="photo sidebar">Daily Step Goal:</div>
-            <div class="name sidebar">10,000</div>
-            <div class="steps sidebar"></div>
-          </div>
-          <div id="viewTeam" class="teamstats" type="button">View My Team</div>
-        <!-- <div class="teammember">
+        </div> -->
+        <div class="teammember">
           <div class="photo sidebar"><img class="teamImage" src="../assets/userImages/TeamImage1.jpg" alt="teamMate1 profile image"></div>
           <div class="name sidebar">Name</div>
           <div class="steps sidebar">Steps Taken</div>
@@ -86,10 +54,9 @@
           <div class="photo sidebar">photo</div>
           <div class="name sidebar">Name</div>
           <div class="steps sidebar">Steps Taken</div>
-        </div> -->
-        <!-- <div class="teamstats" type="button">TeamStats</div>
-      </div> -->
-    </article>
+        </div>
+        <div class="teamstats" type="button">TeamStats</div>
+      </div>
     <div class="box e">
       <div class="widgetA">Steps</div>
       <div class="widgetB">Activity</div>
