--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <div class="box a">
-        <div class="header userInfo">
+        <div class="header">
           <div id="userPhoto" class="photo header"></div>
           <div id="userName" class="username header">Name</div>
           <div id="userSteps" class="userSteps header">Steps Taken</div>
@@ -19,7 +19,7 @@
         <div class="header hydMenu">Hydration Stats</div>
         <div class="header slpMenu">Sleep Stats</div>
       </div>
-      <div class="box d">
+      <div id="sidebarContents" class="box d">
         <!-- <div class="sidebarHeader">
           <img class="profileUserPhoto" src="../assets/userImages/UserImage.jpg" alt="user profile image"></div>
           <div class="profileUser">UserID</div>
@@ -30,6 +30,7 @@
           <div class="key profileStepGoal">DAILY STEP GOAL: 10,000</div>
           <div class="viewTeam" type="button">View My Team</div>
         </div> -->
+        <!-- <div class="profileUser">My Team</div>
         <div class="teammember">
           <div class="photo sidebar"><img class="teamImage" src="../assets/userImages/TeamImage1.jpg" alt="teamMate1 profile image"></div>
           <div class="name sidebar">Name</div>
@@ -55,7 +56,7 @@
           <div class="name sidebar">Name</div>
           <div class="steps sidebar">Steps Taken</div>
         </div>
-        <div class="teamstats" type="button">TeamStats</div>
+        <div class="teamstats" type="button">TeamStats</div> -->
       </div>
     <div class="box e">
       <div class="widgetA">Steps</div>
