Add eventListener to teamView button BUG WARNING

--- a/src/index.html
+++ b/src/index.html
@@ -20,17 +20,17 @@
         <div class="header slpMenu">Sleep Stats</div>
       </div>
       <div id="sidebarContents" class="box d">
-        <!-- <div class="sidebarHeader">
-          <img class="profileUserPhoto" src="../assets/userImages/UserImage.jpg" alt="user profile image"></div>
+        <div class="sidebarHeader">
+          <!-- <img class="profileUserPhoto" src="../assets/userImages/UserImage.jpg" alt="user profile image"></div>
           <div class="profileUser">UserID</div>
           <div class="key profileName">NAME: Firstname Lastname</div>
           <div class="key profileAddress">ADDRESS: 1846 Oxley Street, South Pasadena, CA 91030-9870</div>
           <div class="key profileEmail">EMAIL: peewee.herman@gmail.com</div>
           <div class="key profileStride">STRIDE LENGTH: 4.5</div>
-          <div class="key profileStepGoal">DAILY STEP GOAL: 10,000</div>
-          <div class="viewTeam" type="button">View My Team</div>
-        </div> -->
-        <!-- <div class="profileUser">My Team</div>
+          <div class="key profileStepGoal">DAILY STEP GOAL: 10,000</div> -->
+          <div id="viewTeam"class="viewTeam" type="button">View My Team</div>
+        <!-- </div>
+        <div class="profileUser">My Team</div>
         <div class="teammember">
           <div class="photo sidebar"><img class="teamImage" src="../assets/userImages/TeamImage1.jpg" alt="teamMate1 profile image"></div>
           <div class="name sidebar">Name</div>
@@ -57,6 +57,7 @@
           <div class="steps sidebar">Steps Taken</div>
         </div>
         <div class="teamstats" type="button">TeamStats</div> -->
+        </div>
       </div>
     <div class="box e">
       <div class="widgetA">Steps</div>
