--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
           <div class="key profileEmail">EMAIL: peewee.herman@gmail.com</div>
           <div class="key profileStride">STRIDE LENGTH: 4.5</div>
           <div class="key profileStepGoal">DAILY STEP GOAL: 10,000</div> -->
-          <div id="viewTeam"class="viewTeam" type="button">View My Team</div>
+          <!-- <button id="viewTeam" class="viewTeam" type="button">View My Team</button> -->
         <!-- </div>
         <div class="profileUser">My Team</div>
         <div class="teammember">
