Organize and label CSS

--- a/src/index.html
+++ b/src/index.html
@@ -66,20 +66,20 @@
       <div class="widgetD">Stairs Climbed</div>
     </div>
     <div class="box b">
-        <div class="boxbName">Name</div>
-        <div class="boxbGraph">Steps Done Walked</div>
+        <div class="graphTitle">Name</div>
+        <div class="graph">Steps Done Walked</div>
       </div>
       <div class="box h">
-        <div class="boxHName">Name</div>
-        <div class="boxbHraph">Minutes Active</div>
+        <div class="graphTitle">Name</div>
+        <div class="graph">Minutes Active</div>
       </div>
       <div class="box g">
-          <div class="boxGName">Name</div>
-          <div class="boxGGraph">Miles Runned</div>
+          <div class="graphTitle">Name</div>
+          <div class="graph">Miles Runned</div>
         </div>
       <div class="box i">
-        <div class="boxIName">Name</div>
-        <div class="boxIGraph">Stairs Clombed</div>
+        <div class="graphTitle">Name</div>
+        <div class="graph">Stairs Clombed</div>
       </div>
       <div class="box l">
         <div class="box m">Best Steps</div>
