Add chart displaying weekly hydration data.

--- a/src/index.html
+++ b/src/index.html
@@ -66,6 +66,7 @@
         <canvas id="hydrationChartDay" width="100" height="100"></canvas>
       </div>
     <div class="hydrationWeek">
+        <canvas id="hydrationChartWeek" width="100" height="100"></canvas>
     </div>
       <!-- <div class="box e">
       <div class="widgetA">Steps</div>
