--- a/src/index.html
+++ b/src/index.html
@@ -61,14 +61,15 @@
         </div>
       </div>
   <article class="mainbody">
-    <div class="hydrationWrapper">
+    <div class="hydrationWrapper hidden">
       <div class="hydrationToday">
         <canvas id="hydrationChartDay" width="100" height="100"></canvas>
       </div>
     <div class="hydrationWeek">
         <canvas id="hydrationChartWeek" width="100" height="100"></canvas>
     </div>
-      <!-- <div class="box e">
+    </div>
+      <div class="box e">
       <div class="widgetA">Steps</div>
         <canvas id="myChart" width="10" height="10"></canvas>
       <div class="widgetB">Activity</div>
@@ -97,7 +98,6 @@
         <div class="box o">Best Miles</div>
         <div class="box p">Best Stairs</div>
       </div>
-  </div> -->
   </div>
 </article>
     <!-- <script src="path/to/chartjs/dist/Chart.js"></script> -->
