--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js">
-   </script>
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+   <script src="https://unpkg.com/js-datepicker"></script>
+   <link rel="stylesheet" href="https://unpkg.com/js-datepicker/dist/datepicker.min.css">
     <link href="styles.css" rel ="stylesheet" type="text/css">
     <link rel="reset" type="text/css" href="src/reset.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,7 +64,7 @@
         </div>
       </div>
   <article class="mainbody">
-    <div class="hydrationWrapper hidden">
+    <!-- <div class="hydrationWrapper hidden">
       <div class="hydrationToday">
         <canvas id="hydrationChartDay" width="100" height="100"></canvas>
       </div>
@@ -100,7 +101,7 @@
         <div class="box o">Best Miles</div>
         <div class="box p">Best Stairs</div>
       </div>
-  </div>
+  </div> -->
 </article>
     <!-- <script src="path/to/chartjs/dist/Chart.js"></script> -->
     <script type="text/javascript" src="../src/HydrationRepository.js"></script>
