--- a/src/index.html
+++ b/src/index.html
@@ -64,6 +64,16 @@
         </div>
       </div>
   <article class="mainbody">
+    <div class="sleepWrapper">
+      <div class="sleepToday">
+        <canvas id="dailySleepHoursChart" width="100" height="100"></canvas>
+        <canvas id="dailySleepQualityChart" width="100" height="100"></canvas>
+      </div>
+      <div class="sleepThisWeek">
+        <canvas id="weeklySleepHoursChart" width="100" height="100"></canvas>
+        <canvas id="weeklySleepQualityChart" width="100" height="100"></canvas>
+      </div>
+    </div>
     <!-- <div class="hydrationWrapper hidden">
       <div class="hydrationToday">
         <canvas id="hydrationChartDay" width="100" height="100"></canvas>
@@ -108,6 +118,8 @@
     <script type="text/javascript" src="../src/User.js"></script>
     <script type="text/javascript" src="../src/UserHydration.js"></script>
     <script type="text/javascript" src="../src/userRepository.js"></script>
+    <script type="text/javascript" src="../src/SleepRepository.js"></script>
+    <script type="text/javascript" src="../src/UserSleep.js"></script>
     <script type="text/javascript" src="../data/users.js"></script>
     <script type="text/javascript" src="../data/hydration.js"></script>
     <script type="text/javascript" src="../data/sleep.js"></script>
