Add date selection to hydration day chart

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
         </div>
       </div>
   <article class="mainbody">
-    <div class="sleepWrapper">
+    <!-- <div class="sleepWrapper">
       <div class="sleepToday">
         <canvas id="dailySleepHoursChart" width="100" height="100"></canvas>
         <canvas id="dailySleepQualityChart" width="100" height="100"></canvas>
@@ -73,9 +73,12 @@
         <canvas id="weeklySleepHoursChart" width="100" height="100"></canvas>
         <canvas id="weeklySleepQualityChart" width="100" height="100"></canvas>
       </div>
-    </div>
-    <!-- <div class="hydrationWrapper hidden">
+    </div> -->
+    <!-- <div class="hydrationWrapper">
       <div class="hydrationToday">
+        <form action="">
+          <input type="date">
+        </form>
         <canvas id="hydrationChartDay" width="100" height="100"></canvas>
       </div>
     <div class="hydrationWeek">
