Refactor header CSS

--- a/src/index.html
+++ b/src/index.html
@@ -15,9 +15,10 @@
     <div class="wrapper">
       <div class="box a">
         <div class="header">
-          <div id="userPhoto" class="photo header"></div>
-          <div id="userName" class="username header">Name</div>
-          <div id="userSteps" class="userSteps header">Steps Taken</div>
+          <div id="userPhoto" class="photo header">
+            <div id="userSteps" class="userSteps header">Steps Taken</div>
+          </div>
+          <!-- <div id="userName" class="username header">Name</div> -->
         </div>
         <div class="header actMenu">Activity Stats</div>
         <div class="header hydMenu">Hydration Stats</div>
