--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,8 @@
     <section class="allTime">
     </section>
 </section>
+    <script type="text/javascript" src="../src/activityRepository.js"></script>
+    <script type="text/javascript" src="../src/UserActivity.js"></script>
     <script type="text/javascript" src="../src/HydrationRepository.js"></script>
     <script type="text/javascript" src="../src/User.js"></script>
     <script type="text/javascript" src="../src/UserHydration.js"></script>
